--- a/sVanilla/src/ClientUi/Home/HomePage.ui
+++ b/sVanilla/src/ClientUi/Home/HomePage.ui
@@ -1,121 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>HomePage</class>
- <widget class="QWidget" name="HomePage">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>282</width>
-    <height>344</height>
-   </rect>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QToolButton" name="IconButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: transparent;
-border:none;</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>45</width>
-       <height>45</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="::SearchLineEdit" name="HomeLineEdit">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QPushButton" name="ClipBoardBtn">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="toolTip">
-        <string>Add From Clipboard</string>
-       </property>
-       <property name="whatsThis">
-        <string>Add From Clipboard</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
+      <class>HomePage</class>
+      <widget class="QWidget" name="HomePage">
+            <property name="geometry">
+                  <rect>
+                        <x>0</x>
+                        <y>0</y>
+                        <width>282</width>
+                        <height>344</height>
+                  </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout">
+                  <item>
+                        <widget class="QToolButton" name="IconButton">
+                              <property name="sizePolicy">
+                                    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                                          <horstretch>0</horstretch>
+                                          <verstretch>0</verstretch>
+                                    </sizepolicy>
+                              </property>
+                              <property name="styleSheet">
+                                    <string notr="true">background-color: transparent;
+                                          border:none;</string>
+                              </property>
+                              <property name="text">
+                                    <string />
+                              </property>
+                              <property name="iconSize">
+                                    <size>
+                                          <width>45</width>
+                                          <height>45</height>
+                                    </size>
+                              </property>
+                        </widget>
+                  </item>
+                  <item>
+                        <widget class="::SearchLineEdit" name="HomeLineEdit">
+                              <property name="sizePolicy">
+                                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                                          <horstretch>0</horstretch>
+                                          <verstretch>0</verstretch>
+                                    </sizepolicy>
+                              </property>
+                        </widget>
+                  </item>
+                  <item>
+                        <spacer name="verticalSpacer">
+                              <property name="orientation">
+                                    <enum>Qt::Vertical</enum>
+                              </property>
+                              <property name="sizeHint" stdset="0">
+                                    <size>
+                                          <width>20</width>
+                                          <height>40</height>
+                                    </size>
+                              </property>
+                        </spacer>
+                  </item>
+                  <item>
+                        <widget class="QWidget" name="widget" native="true">
+                              <property name="geometry">
+                                    <rect>
+                                          <x>-10</x>
+                                          <y>0</y>
+                                          <width>258</width>
+                                          <height>32</height>
+                                    </rect>
+                              </property>
+                              <layout class="QHBoxLayout" name="horizontalLayout">
+                                    <item>
+                                          <widget class="QPushButton" name="ClipBoardBtn">
+                                                <property name="sizePolicy">
+                                                      <sizepolicy hsizetype="Minimum"
+                                                            vsizetype="Preferred">
+                                                            <horstretch>0</horstretch>
+                                                            <verstretch>0</verstretch>
+                                                      </sizepolicy>
+                                                </property>
+                                                <property name="toolTip">
+                                                      <string>Add From Clipboard</string>
+                                                </property>
+                                                <property name="whatsThis">
+                                                      <string>Add From Clipboard</string>
+                                                </property>
+                                                <property name="text">
+                                                      <string />
+                                                </property>
+                                          </widget>
+                                    </item>
+                                    <item>
+                                          <widget class="QPushButton" name="HistoryBtn">
+                                                <property name="text">
+                                                      <string />
+                                                </property>
+                                          </widget>
+                                    </item>
+                                    <item>
+                                          <spacer name="horizontalSpacer">
+                                                <property name="orientation">
+                                                      <enum>Qt::Horizontal</enum>
+                                                </property>
+                                                <property name="sizeHint" stdset="0">
+                                                      <size>
+                                                            <width>40</width>
+                                                            <height>20</height>
+                                                      </size>
+                                                </property>
+                                          </spacer>
+                                    </item>
+                                    <item>
+                                          <widget class="QLabel" name="ErrorMsgLabel">
+                                                <property name="text">
+                                                      <string />
+                                                </property>
+                                          </widget>
+                                    </item>
+                              </layout>
+                        </widget>
+                  </item>
+            </layout>
       </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="HistoryBtn">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QLabel" name="ErrorMsgLabel">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-  </layout>
- </widget>
- <customwidgets>
-  <customwidget>
-   <class>::SearchLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>SUI/SearchLineEdit.h</header>
-  </customwidget>
- </customwidgets>
- <resources/>
- <connections/>
+      <customwidgets>
+            <customwidget>
+                  <class>::SearchLineEdit</class>
+                  <extends>QLineEdit</extends>
+                  <header>SUI/SearchLineEdit.h</header>
+            </customwidget>
+      </customwidgets>
+      <resources />
+      <connections />
 </ui>
