--- a/sVanilla/src/SUI/Tips/Toast.ui
+++ b/sVanilla/src/SUI/Tips/Toast.ui
@@ -13,28 +13,15 @@
   <property name="windowTitle">
    <string>Toast</string>
   </property>
-  <widget class="QPushButton" name="btnSearch">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>8</y>
-     <width>32</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">.QPushButton
-{
-border-radius:4px;
-border:none;
-padding:4px;
-image:url(:/icon/search.svg);
-}</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
